# MIND

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
src/: CMakeLists.txt  my_module.cpp
src/mind/: __init__.py
src/mind_cxx/: CMakeLists.txt  MeshStructs.h  m3c.cpp  m3c.h  mldf_api.cpp  utils.cpp  utils.h
src/mind_cxx/connected-components-3d/: cc3d_graphs.hpp
src/mind_cxx/gco-v3.0/: CMakeLists.txt  GCO_README.TXT  GCoptimization.h
src/mldf/: __init__.py  __init__.pyi
src/mldf_cxx/: CMakeLists.txt  m3c.cpp  mldf_api.cpp  mldf_api.h  utils.cpp  utils.h
src/mldf_cxx/connected-components-3d/: cc3d.hpp  cc3d.pyx  cc3d_continuous.hpp
src/mldf_cxx/gco-v3.0/: example.cpp
